# otus_rl

./: .gitignore  TD3_agent.py  TD3_utils.py  UGS_SAC_training.py  UGS_TD3_training.py  UGS_environment.py  pyproject.toml  Тема_3_ДЗ_Double_Q_Learing.ipynb  Тема_6_ДЗ_DQN.ipynb  Тема_6_ДЗ_DQN_modifications.ipynb  Тема_8_ДЗ_A2C.py  Тема_8_ДЗ_DDPG.ipynb  Тема_8_ДЗ_DDPG.py
