[tool.poetry]
name = "otus"
version = "0.1.0"
description = "RL"
authors = ["Stepan Sushko"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.1"
numpy = "^1.26.4"
tqdm = "^4.66.2"
gymnasium = "^0.29.1"
torch = "^2.3.0+cu121"
gym = "^0.26.2"
gdown = "^5.1.0"
plotly = "^5.22.0"
openpyxl = "^3.1.2"
nbformat = "4.2.0"
matplotlib = "3.9.0"

[tool.poetry.group.dev.dependencies]
gymnasium = "^0.29.1"
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
